Bug 216205 - Unified build fix for "redefinition of 'kCMVideoCodecType_VP9"
Summary: Unified build fix for "redefinition of 'kCMVideoCodecType_VP9"
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jer Noble
URL:
Keywords: InRadar
Depends on:
Blocks: 202798
  Show dependency treegraph
 
Reported: 2020-09-04 17:12 PDT by Jer Noble
Modified: 2020-09-17 02:19 PDT (History)
11 users (show)

See Also:


Attachments
Patch (11.96 KB, patch)
2020-09-04 17:20 PDT, Jer Noble
no flags Details | Formatted Diff | Diff
Patch (13.34 KB, patch)
2020-09-08 09:18 PDT, Jer Noble
no flags Details | Formatted Diff | Diff
Patch (12.79 KB, patch)
2020-09-08 09:30 PDT, Jer Noble
no flags Details | Formatted Diff | Diff
Patch (13.65 KB, patch)
2020-09-08 09:40 PDT, Jer Noble
no flags Details | Formatted Diff | Diff
Patch (13.24 KB, patch)
2020-09-08 16:18 PDT, Jer Noble
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jer Noble 2020-09-04 17:12:58 PDT
Unified build fix for "redefinition of 'kCMVideoCodecType_VP9"
Comment 1 Jer Noble 2020-09-04 17:20:10 PDT
Created attachment 408049 [details]
Patch
Comment 2 Darin Adler 2020-09-04 21:30:08 PDT
Comment on attachment 408049 [details]
Patch

Build failures so I won’t r+ yet.
Comment 3 Jer Noble 2020-09-08 09:18:48 PDT
Created attachment 408233 [details]
Patch
Comment 4 Jer Noble 2020-09-08 09:30:47 PDT
Created attachment 408234 [details]
Patch
Comment 5 Jer Noble 2020-09-08 09:40:04 PDT
Created attachment 408235 [details]
Patch
Comment 6 Jer Noble 2020-09-08 16:18:18 PDT
Created attachment 408282 [details]
Patch
Comment 7 Peng Liu 2020-09-08 17:03:50 PDT
Comment on attachment 408282 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=408282&action=review

> Source/WebCore/ChangeLog:17
> +        (): Deleted.

Something is missing here?
Comment 8 Jer Noble 2020-09-08 18:32:15 PDT
(In reply to Peng Liu from comment #7)
> Comment on attachment 408282 [details]
> Patch
> 
> View in context:
> https://bugs.webkit.org/attachment.cgi?id=408282&action=review
> 
> > Source/WebCore/ChangeLog:17
> > +        (): Deleted.
> 
> Something is missing here?

Seems like a bug in the ChangeLog generation script.
Comment 9 Darin Adler 2020-09-08 18:44:25 PDT
(In reply to Jer Noble from comment #8)
> (In reply to Peng Liu from comment #7)
> > > Source/WebCore/ChangeLog:17
> > > +        (): Deleted.
> > 
> > Something is missing here?
> 
> Seems like a bug in the ChangeLog generation script.

Yes, definitely is. The script has a lot of bugs so I recommend looking over what it generated. It’s there to help you write the change log, not to write it for you.

However, since a lot of people are not writing per-function change log I’m starting to wonder what we should do. Not sure that blob of text is doing a lot of good if the person who wrote the change log isn’t reading it.
Comment 10 youenn fablet 2020-09-10 23:58:04 PDT
Comment on attachment 408282 [details]
Patch

ENABLE_VP9 is Mac Big Sur only, RTC_ENABLE_VP9 is on in all cases.
Maybe we should rationalise that.
Comment 11 Radar WebKit Bug Importer 2020-09-11 17:13:14 PDT
<rdar://problem/68740141>
Comment 12 EWS 2020-09-17 02:19:16 PDT
Committed r267185: <https://trac.webkit.org/changeset/267185>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 408282 [details].