Unified build fix for "redefinition of 'kCMVideoCodecType_VP9" https://bugs.webkit.org/show_bug.cgi?id=216205

Reviewed by Youenn Fablet.

Source/WebCore:

kCMVideoCodecType_VP9 is present in the macOS Big Sur SDK, so the redeclaration can
be removed. To protect builds using prior OS SDKs, wrap the entire VP9 implementation
in ENABLE(VP9) checks.

* platform/graphics/VP9Utilities.cpp:
* platform/graphics/VP9Utilities.h:
* platform/graphics/cocoa/MediaEngineConfigurationFactoryCocoa.cpp:
(WebCore::videoCodecTypeFromRFC4281Type):
(WebCore::createMediaPlayerDecodingConfigurationCocoa):
(): Deleted.
* platform/graphics/cocoa/SourceBufferParserWebM.cpp:
(WebCore::SourceBufferParserWebM::isContentTypeSupported):
* platform/graphics/cocoa/VP9UtilitiesCocoa.h:
* platform/graphics/cocoa/VP9UtilitiesCocoa.mm:
* testing/Internals.cpp:
(WebCore::Internals::Internals):
(WebCore::Internals::parseVPCodecParameters):
(WebCore::Internals::setHardwareVP9DecoderDisabledForTesting):
(WebCore::Internals::setVP9ScreenSizeAndScaleForTesting):

Source/WebKit:

Wrap calls to WebCore VP9 functions in ENABLE(VP9) checks.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::creationParameters):
* WebProcess/WebProcess.cpp:
* WebProcess/WebProcess.h:


Canonical link: https://commits.webkit.org/229459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267185 268f45cc-cd09-0410-ab3c-d52691b4dbfc