Source/WebKit/WebProcess/WebPage/WebPage.cpp
@@ -787,11 +787,13 @@ WebPage::WebPage(PageIdentifier pageID, WebPageCreationParameters&& parameters)
         WebProcess::singleton().ensureGPUProcessConnection().updateParameters(parameters);
 #endif
 
+#if ENABLE(VP9)
     if (parameters.shouldEnableVP9Decoder)
         WebProcess::singleton().enableVP9Decoder();
 
     if (parameters.shouldEnableVP9SWDecoder)
         WebProcess::singleton().enableVP9SWDecoder();
+#endif
 
     m_page->setCanUseCredentialStorage(parameters.canUseCredentialStorage);
 
