Source/WebKit/WebProcess/WebProcess.h
@@ -332,8 +332,10 @@ public:
     void setUseGPUProcessForMedia(bool);
 #endif
 
+#if ENABLE(VP9)
     void enableVP9Decoder();
     void enableVP9SWDecoder();
+#endif
 
 #if PLATFORM(COCOA)
     void willWriteToPasteboardAsynchronously(const String& pasteboardName);
@@ -661,8 +663,11 @@ private:
 #endif
 
     bool m_useGPUProcessForMedia { false };
+
+#if ENABLE(VP9)
     bool m_vp9DecoderEnabled { false };
     bool m_vp9SWDecoderEnabled { false };
+#endif
 };
 
 } // namespace WebKit
